2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Use the same indentation style for all function prototypes.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document updated defaults.

	* schroot/schroot.conf.5.in: Document updated defaults.

	* schroot/sbuild-chroot-lvm-snapshot.cc
	(chroot_lvm_snapshot): Default to running setup and session
	scripts.

	* schroot/sbuild-chroot-file.cc
	(chroot_file): Default to running setup and session scripts.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* debian/control: Add versioned depends on libpam0g-dev >=
	0.79-3.1, because earlier versions have broken headers, due to
	redefining internal glibc/libstdc++ types.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Remove all keyfile constructors from sbuild::chroot and derived
	classes.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* doc/schroot.dox.in: Strip the build directory from file
	pathnames, use built-in STL support, and sort classes by
	namespace.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::chroot::chroot_ptr to sbuild::chroot::ptr,
	sbuild::chroot::SetupType to sbuild::chroot::setup_type, and
	sbuild::chroot::SessionFlags to sbuild::chroot::session_flags.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename schroot::Options to schroot::options.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Session to sbuild::session.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::AuthConvTty to sbuild::auth_conv_tty.

	* Rename sbuild::AuthConv to sbuild::auth_conv.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::AuthMessage to sbuild::auth_message.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Auth to sbuild::auth.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Lock to sbuild::lock, sbuild::FileLock to
	sbuild::file_lock, and sbuild::DeviceLock to sbuild::device_lock.

2006-02-05  Roger Leigh  <rleigh@debian.org>
